--- a/frontend/src/components/header/style.css
+++ b/frontend/src/components/header/style.css
@@ -3,6 +3,7 @@ html {
 }
 
 body {
+  background: #000;
   color: aliceblue;
 }
 
@@ -120,10 +121,6 @@ a:hover {
   border: 1px solid gray;
 }
 
-.navbar-nav {
-  padding-left: 111px;
-}
-
 h5 {
   cursor: pointer;
   color: white;
@@ -145,17 +142,4 @@ h5:hover {
 
 .jpr1 {
   z-index: +1;
-}
-
-#bas {
-  position: fixed;
-  z-index: +4;
-  width: -webkit-fill-available;
-
-  top: 0rem;
-}
-
-.nav-link {
-  font-size: 2rem;
-  font-weight: 800;
 }
