--- a/frontend/src/components/cultpasselite/cultelite.css
+++ b/frontend/src/components/cultpasselite/cultelite.css
@@ -1,14 +1,15 @@
 body {
   background-color: #080421;
 }
+
 .ppp {
-  position: relative;
+  position: absolute;
   top: 6rem;
 }
 
 .cult1 {
   position: relative;
-  top: 100rem;
+  top: 60rem;
   text-align: center;
   display: grid;
 }
@@ -34,38 +35,32 @@ body {
   padding-top: 50rem;
 }
 
+.lastdivqq {
+  position: absolute;
+  top: 388rem;
+  left: 0;
+  width: 94.6rem;
+  background: #2c2c2b;
+  padding-left: 10rem;
+}
+
 .cename2 {
   display: flex;
   margin-left: 9rem;
-  position: relative;
-  right: 12rem;
 }
 
 .c22 {
   width: 37.5rem;
   margin-left: 50rem;
   height: 34rem;
-  padding-top: 0rem;
-  margin-top: 35.8rem;
+  padding-top: 4rem;
+  margin-top: -1.2rem;
   background: #2c2c2c;
   border-radius: 8px;
-  position: relative;
-  bottom: 36rem;
 }
 
-/* .js2img2 {
-  margin-top: -49rem;
-} */
-
-.ala {
-  position: relative;
-  bottom: 5rem;
-}
-
-.ncelite {
-  text-align: center;
-  position: relative;
-  bottom: 18rem;
+.js2img2 {
+  margin-top: -4rem;
 }
 
 .js1img2 {
@@ -83,8 +78,24 @@ body {
   margin-left: 9rem;
   border-radius: 8px;
   float: left;
+}
+
+.starthome {
   position: relative;
-  right: 21rem;
+  top: 2rem;
+  left: 0rem;
+}
+
+.extra {
+  position: absolute;
+  background: rgb(50, 50, 52);
+  left: 61rem;
+  top: 71.4rem;
+  border-radius: 10px;
+  border: 1px solid rgba(181, 134, 32, 0.3);
+  z-index: -2;
+  width: 23rem;
+  height: 24rem;
 }
 
 .limg {
@@ -95,7 +106,7 @@ body {
   display: flex;
   text-align: center;
   margin-top: 3rem;
-  margin-left: 55rem;
+  margin-left: 32rem;
   padding-right: 28rem;
 }
 
@@ -206,13 +217,17 @@ body {
 
 .end {
   display: flex;
-
-  display: flex;
-  margin-left: 15rem;
+  margin-left: -3rem;
 }
 
 .ct {
   text-decoration: line-through;
+}
+
+.ffter {
+  margin-top: -28rem;
+  height: 22.5rem;
+  background: black;
 }
 
 .lastdivhome {
@@ -224,10 +239,10 @@ body {
   margin-left: -9rem;
 }
 
-/* .ffter {
+.ffter {
   margin-top: 7rem;
   padding-left: 8rem;
-} */
+}
 
 .ffterhome {
   height: 23rem;
@@ -240,9 +255,9 @@ body {
 
 .startr {
   position: relative;
-  top: -6rem;
-  left: 11rem;
-  padding-top: 8rem;
+  top: 0rem;
+  left: 0rem;
+  padding-top: 4rem;
 }
 
 .vod {
@@ -251,99 +266,4 @@ body {
 }
 .vod1 {
   border-radius: 11%;
-}
-.cmnh33 {
-  position: relative;
-  color: #ffeb72;
-  text-align: center;
-  width: 25rem;
-  font-size: 24px;
-  right: 6rem;
-  background: rgb(50, 50, 52);
-  border-radius: 10px;
-  border: 1px solid rgba(181, 134, 32, 0.3);
-  bottom: 13rem;
-  padding-top: 10rem;
-  padding-bottom: 4rem;
-}
-
-.cmn1 {
-  text-align: center;
-  width: fit-content;
-  padding: 6rem 5rem;
-  position: relative;
-  top: 10rem;
-  left: 19rem;
-  background: rgb(50, 50, 52);
-  border-radius: 10px;
-  border: 1px solid rgba(181, 134, 32, 0.3);
-}
-
-.cmn3 {
-  text-align: center;
-  width: fit-content;
-  padding: 7rem 3.5rem;
-  position: relative;
-  top: 12rem;
-  color: #ebcd68;
-  left: 19rem;
-  background: rgb(50, 50, 52);
-  border-radius: 10px;
-  border: 1px solid rgba(181, 134, 32, 0.3);
-  background-image: url(https://cdn-images.cure.fit/www-curefit-com/image/upload/c_fill,w_370,q_auto:eco,dpr_1.25,f_auto,fl_progressive/image/test/glass-card-feature-widget/cult-pass-black/fourth-feature-background-v2.png);
-}
-.cmn4 {
-  text-align: center;
-  width: fit-content;
-  padding: 19.7rem 3.5rem;
-  position: relative;
-  top: -29.7rem;
-  color: #ebcd68;
-  left: 47rem;
-  font-weight: bold;
-  font-size: x-large;
-  background: rgb(50, 50, 52);
-  border-radius: 10px;
-  border: 1px solid rgba(181, 134, 32, 0.3);
-}
-.cmnimg2 {
-  position: relative;
-  bottom: 6rem;
-}
-
-.h32 {
-  position: relative;
-  bottom: 11rem;
-}
-
-.ay {
-  width: fit-content;
-  height: 20rem;
-  text-align: center;
-  width: fit-content;
-  padding: 11.7rem 6rem;
-  position: relative;
-  top: -71.7rem;
-  color: #ebcd68;
-  left: 75rem;
-  font-weight: bold;
-  font-size: x-large;
-  background: rgb(50, 50, 52);
-  border-radius: 10px;
-  border: 1px solid rgba(181, 134, 32, 0.3);
-}
-
-.cmn1vd {
-  width: 5rem;
-}
-.cmn1img {
-  padding: 1rem;
-}
-
-.cmn6 {
-  width: fit-content;
-  height: 8rem;
-  position: relative;
-  left: 81rem;
-  bottom: 62rem;
 }
