--- a/frontend/src/components/fitness/fitness.css
+++ b/frontend/src/components/fitness/fitness.css
@@ -4,15 +4,14 @@
 }
 
 .nav {
+  height: 3.5rem;
+  padding: 14px;
   background-color: #393a3b;
   width: 100%;
-  position: relative;
-  top: 5rem;
-  z-index: +4;
-  height: 4rem;
-  padding-top: 20px;
-  padding-left: 16rem;
+  position: absolute;
+  bottom: 42rem;
   position: fixed;
+  z-index: +2;
 }
 
 .nav1 {
@@ -50,9 +49,18 @@ a > h6:hover {
   opacity: 100%;
 }
 
+.lastdivfit {
+  position: absolute;
+  top: 515rem;
+  right: 0rem;
+  width: 95.6rem;
+  background: #2c2c2b;
+  padding-left: 11rem;
+}
+
 .fitmimg {
+  width: 94.9rem;
   z-index: -2;
-  width: 100%;
 }
 
 .fithead {
@@ -62,9 +70,8 @@ a > h6:hover {
 
 .btnm {
   width: 9rem;
-  position: relative;
-  left: 65rem;
-  bottom: 31rem;
+  margin-top: -26rem;
+  margin-left: 43rem;
 }
 
 .btn1 {
@@ -81,10 +88,10 @@ a > h6:hover {
 
 .fitcard {
   position: relative;
+  top: 7rem;
   text-align: center;
-  bottom: 22rem;
-  width: 64rem;
-  left: 42rem;
+  width: 65rem;
+  left: 20rem;
   display: flex;
 }
 
@@ -127,7 +134,7 @@ a > h6:hover {
 .js1img {
   margin-left: -16rem;
   width: 38rem;
-  margin-top: -19rem;
+  margin-top: -7rem;
   padding-top: 15rem;
 }
 
@@ -138,7 +145,7 @@ a > h6:hover {
 .c1 {
   padding: 4rem;
   background: #181818;
-  height: 37rem;
+  height: 47rem;
   width: 38rem;
   margin-left: 9rem;
   border-radius: 8px;
@@ -156,7 +163,7 @@ a > h6:hover {
 }
 
 .js1 {
-  padding-left: 20rem;
+  background: black;
 }
 
 .sbtn1 {
@@ -186,16 +193,16 @@ a > h6:hover {
 }
 
 .js2img {
-  margin-top: -4rem;
+  margin-top: 13rem;
 }
 
 .c2 {
   width: 37.5rem;
-  margin-left: 58rem;
-  height: 37rem;
+  margin-left: 50rem;
+  height: 52rem;
   padding-top: 4rem;
+  margin-top: -6.2rem;
   background: #2c2c2c;
-  margin-top: -22px;
   border-radius: 8px;
 }
 
@@ -225,10 +232,10 @@ a > h6:hover {
 }
 
 .cename {
-  position: relative;
+  position: absolute;
   display: flex;
-
-  left: 29rem;
+  left: 9rem;
+  top: 57rem;
 }
 
 .cenamep {
@@ -262,7 +269,7 @@ i {
 .simg1 {
   height: 27rem;
   width: 25rem;
-  margin-left: 59rem;
+  margin-left: 35rem;
   border-radius: 9px;
   opacity: 60%;
 }
@@ -276,7 +283,7 @@ i {
 .simg2 {
   height: 27rem;
   width: 25rem;
-  margin-left: 59rem;
+  margin-left: 35rem;
   border-radius: 9px;
   opacity: 60%;
 }
@@ -290,7 +297,7 @@ i {
 .simg3 {
   height: 27rem;
   width: 25rem;
-  margin-left: 59rem;
+  margin-left: 35rem;
   border-radius: 9px;
   opacity: 60%;
 }
@@ -304,7 +311,7 @@ i {
 .simg4 {
   height: 27rem;
   width: 25rem;
-  margin-left: 59rem;
+  margin-left: 35rem;
   border-radius: 9px;
   opacity: 60%;
 }
@@ -367,9 +374,7 @@ i {
 }
 
 .hr1 {
-  width: 92rem;
-  margin-left: 1rem;
-  margin-top: 3rem;
+  margin-left: 5rem;
 }
 
 .h1img {
@@ -409,10 +414,6 @@ i {
   padding: 2px 1rem;
 }
 
-.hc1 {
-  text-align: -webkit-center;
-}
-
 .ap {
   padding-top: 1rem;
 }
@@ -428,9 +429,8 @@ i {
 
 table {
   width: 64rem;
-  position: relative;
-  left: 34rem;
-  top: 3rem;
+  margin-left: 20rem;
+  margin-top: 6rem;
 }
 
 th {
@@ -480,7 +480,7 @@ th {
 
 .bh {
   text-align: center;
-  margin-top: 11rem;
+  margin-top: 5rem;
 }
 
 .bh1 {
@@ -519,7 +519,7 @@ th {
 
 .nic {
   background-image: url(https://cdn-images.cure.fit/www-curefit-com/image/upload/c_fill,q_auto:eco,dpr_1.25,f_auto,fl_progressive/image/vm/25fb312f-19c2-4495-8d92-8e807b68b67d.jpeg);
-  margin-top: 7rem;
+  margin-top: 3rem;
 }
 
 .nic1 {
@@ -619,25 +619,24 @@ th {
   margin-left: 17rem;
   border-radius: 45px;
   width: 66rem;
-
-  margin-top: 10rem;
 }
 
 .vid2 {
-  width: 90rem;
-  opacity: 47%;
-  position: relative;
-  top: 30rem;
-  border-radius: 10px;
-  right: 40rem;
+  width: 75rem;
+  opacity: 27%;
+  border-radius: 42px;
 }
 
 .vid {
   position: absolute;
   width: 2rem;
   right: 83rem;
-  bottom: -370.5rem;
+  bottom: -361.5rem;
   height: 41rem;
+}
+
+.ay {
+  width: 94.9rem;
 }
 
 .pimg {
@@ -696,6 +695,7 @@ th {
 
 .okdiv {
   background-image: url(https://cdn-images.cure.fit/www-curefit-com/image/upload/c_fill,w_1600,ar_2,q_auto:eco,dpr_2,f_auto,fl_progressive/image/vm/e33780ba-8a13-4254-b2f1-2b50be6273e0.svg);
+  margin-top: -20rem;
   height: 38rem;
   background-size: 97rem;
   background-repeat: no-repeat;
@@ -707,7 +707,7 @@ th {
   background-size: 71rem;
   padding-left: 4rem;
   padding-top: 2rem;
-  margin-left: 24rem;
+  margin-left: 12rem;
   width: 71rem;
   height: 25rem;
   margin-top: 4rem;
@@ -744,12 +744,6 @@ th {
   width: 9rem;
 }
 
-.mstimg {
-  position: relative;
-  top: 7rem;
-  text-align: center;
-}
-
 .fiimg2 {
   position: relative;
   opacity: 1;
@@ -761,12 +755,6 @@ th {
 
 .hlink {
   z-index: +5;
-  font-size: 32px;
-  margin-top: -7px;
-}
-.head h6 {
-  font-size: 32px;
-  margin-top: -7px;
 }
 
 .ffterfit {
