--- a/frontend/src/components/home/home.css
+++ b/frontend/src/components/home/home.css
@@ -1,12 +1,7 @@
-/* body {
-  background-color: black;
-} */
-
 .homelogo {
   width: 30%;
-  position: relative;
-  top: 25rem;
-  left: 3rem;
+  /* text-align: center; */
+  margin-top: 15rem;
 }
 
 .center {
@@ -14,47 +9,58 @@
 }
 
 .svg1 {
-  width: auto;
-  position: relative;
-  bottom: -45rem;
-  right: 8rem;
+  width: 61rem;
+  margin-top: -40rem;
+  margin-left: -26rem;
 }
 
 .gredi {
   position: absolute;
   z-index: -5;
-  height: 857%;
+  height: 1080%;
   width: 100%;
 }
 
 .svg2 {
-  width: auto;
-  position: relative;
-  right: 8rem;
-  top: 48rem;
+  width: 51rem;
+  margin-left: -17rem;
+  margin-top: -10rem;
 }
 
 .svg3 {
-  width: 39rem;
+  margin-top: -50rem;
+  margin-left: 61.3rem;
+  width: 31rem;
   transform: rotatey(6deg);
-  position: relative;
-  left: 95rem;
 }
 
 .svg4 {
-  width: 46rem;
-  position: relative;
+  margin-top: -21rem;
+  margin-left: 61rem;
+  width: 33rem;
+  position: absolute;
   transform: rotate(356deg);
-  bottom: 6rem;
-  left: 95rem;
 }
 
 .homeh1 {
   text-align: center;
+  width: 48rem;
+  margin-left: 23rem;
+  margin-top: -6rem;
+}
+
+.homebtn {
+  margin-left: 41.6rem;
+  margin-top: 2rem;
+}
+
+.ffterhome {
+  height: 23rem;
   position: relative;
-  width: 47rem;
-  bottom: 8rem;
-  left: 51rem;
+  top: 24rem;
+  padding-left: 9rem;
+  margin-left: 0rem;
+  background: black;
 }
 
 .hbtn2 {
@@ -64,9 +70,6 @@
   font-size: 15px;
   color: coral;
   opacity: 100%;
-  position: relative;
-  bottom: 4rem;
-  left: 68rem;
 }
 
 .hbtn2:hover {
@@ -75,7 +78,9 @@
 }
 
 .erro {
+  margin-left: 46.6rem;
   width: 1.55rem;
+  margin-top: 1.5rem;
 }
 /* 
 .top {
@@ -105,8 +110,35 @@
 .ianimate1 {
   position: absolute;
   width: 40%;
-  left: 74rem;
+  left: 53rem;
   top: 30rem;
+}
+
+.box1 {
+  width: 12rem;
+  text-align: center;
+  line-height: 25px;
+  float: left;
+}
+
+.box {
+  position: relative;
+  float: left;
+  margin-left: 4rem;
+  left: 6.5rem;
+  top: 12rem;
+
+  background: rgb(255 255 255 / 5%);
+  border: 1pxsolidrgb (255 255 255 / 20%);
+  flex-basis: 30%;
+  backdrop-filter: blur(50px);
+  border-radius: 10px;
+  padding: 25px 0px 20px;
+  transition: all 300ms ease;
+  cursor: pointer;
+  background: rgb(255 255 255 0.05);
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  padding: 4px 5rem;
 }
 
 .imgc {
@@ -116,9 +148,9 @@
 
 .h1 {
   position: absolute;
-  top: 24rem;
-  left: 50rem;
-  width: 43rem;
+  top: 32rem;
+  left: 34rem;
+  width: 26rem;
   font-weight: revert;
 }
 
@@ -141,14 +173,14 @@
   right: 36rem;
 }
 
-/* .p1 {
-    position: relative;
-    left: -47rem;
-    top: 88.3rem;
-    width: 16rem;
-    height: 20rem;
-    border-radius: 9px;
-  } */
+.p1 {
+  position: relative;
+  left: -47rem;
+  top: 88.3rem;
+  width: 16rem;
+  height: 20rem;
+  border-radius: 9px;
+}
 
 .p4 {
   width: 16rem;
@@ -164,7 +196,7 @@
   border-radius: 9px;
   width: 16rem;
   height: 20rem;
-  bottom: -12.3rem;
+  bottom: -8.3rem;
   left: 48.7rem;
 }
 
@@ -172,7 +204,7 @@
   border-radius: 9px;
   position: relative;
   width: 16rem;
-  bottom: 3.7rem;
+  bottom: 11.7rem;
   height: 20rem;
   left: 32.4rem;
 }
@@ -192,13 +224,13 @@
   border-radius: 9px;
   position: relative;
   left: 32.5rem;
-  bottom: -5rem;
+  bottom: 11rem;
 }
 
 .p8 {
   position: relative;
   left: 49rem;
-  bottom: 11rem;
+  bottom: 31rem;
   width: 16rem;
   height: 20rem;
   border-radius: 9px;
@@ -206,41 +238,40 @@
 
 .p2 {
   width: 16rem;
-  height: 28rem;
+  height: 20rem;
   position: relative;
-  top: 92.3rem;
+  top: 88.3rem;
   border-radius: 9px;
   left: 65.4rem;
-  padding-bottom: 8rem;
 }
 
+.row {
+  width: 76rem;
+}
+.checkout-icon {
+  position: relative;
+  top: 5rem;
+  left: 1rem;
+}
 .demo1 {
-  width: 30rem;
+  width: 22rem;
 }
 
 .ahref {
   margin-top: -13rem;
-  margin-left: -2rem;
+  margin-left: 10rem;
 }
 
 .demo2 {
-  width: 30rem;
+  width: 22rem;
 }
 
 .demo3 {
-  width: 30rem;
+  width: 22rem;
 }
 
 .col-4 {
   padding: 0 2rem;
-}
-.d1 {
-  position: relative;
-  right: 3rem;
-}
-.d3 {
-  position: relative;
-  right: -3rem;
 }
 
 .dd1 {
@@ -266,9 +297,9 @@
 }
 
 li {
-  margin-left: -2.4rem;
+  margin-left: -1rem;
   font-size: 21px;
-  opacity: 80%;
+  opacity: 70%;
   line-height: 36px;
 }
 
@@ -276,10 +307,22 @@ li {
   opacity: 100%;
 }
 
+.demo1:hover {
+  width: 23rem;
+}
+
+.demo3:hover {
+  width: 23rem;
+}
+
+.demo2:hover {
+  width: 23rem;
+}
+
 .headd {
   text-align: center;
   position: relative;
-  bottom: 59rem;
+  bottom: 24rem;
 }
 
 .fitli {
@@ -316,7 +359,7 @@ li {
   backdrop-filter: blur(50px);
   font-weight: 700;
   margin-left: -1.7rem;
-  margin-top: 2rem;
+  margin-top: 4rem;
 }
 
 .bestbtn1:hover {
@@ -349,18 +392,7 @@ li {
   font-weight: 700;
   margin-left: -1.7rem;
   margin-top: 6.3rem;
-  position: relative;
-  bottom: 5rem;
 }
-
-.mi {
-  font-size: 24px;
-  margin-left: -2.4rem;
-}
-
-/* li {
-  font-size: 14px;
-} */
 
 .bestbtn3:hover {
   background: rgb(255 255 255 / 20%);
@@ -372,7 +404,7 @@ li {
   margin-left: 159px;
   width: max-content;
   position: relative;
-  bottom: 2.5rem;
+  bottom: 2.3rem;
   font-weight: 700;
   color: #f06055;
 }
@@ -387,7 +419,7 @@ li {
   margin-left: 159px;
   width: max-content;
   position: relative;
-  bottom: 2.5rem;
+  bottom: 2.3rem;
   font-weight: 700;
   color: #f06055;
 }
@@ -413,50 +445,48 @@ li {
 
 .raw2 {
   text-align: left;
+  float: right;
   position: relative;
-  right: -29rem;
-  bottom: 23rem;
+  right: 9rem;
+  bottom: 2rem;
 }
 .raw1 {
   text-align: left;
+  float: right;
   position: relative;
-  right: -29rem;
-  bottom: 27rem;
+  right: 9rem;
+  bottom: 5rem;
 }
 
 .tpcol1 {
   background-image: url(https://cdn-images.cure.fit/www-curefit-com/image/upload/c_fill,w_400,ar_1.164,q_auto:eco,dpr_1.25,f_auto,fl_progressive//image/test/four-square-card/cult-transform-glass-green.png);
-  width: 40rem;
-  height: 38rem;
+  width: 31rem;
+  height: 27rem;
   background-repeat: no-repeat;
   margin: 0 2rem;
-  background-size: 40rem;
 }
 
 .tpcol2 {
   background-image: url(https://cdn-images.cure.fit/www-curefit-com/image/upload/c_fill,w_400,ar_1.164,q_auto:eco,dpr_1.25,f_auto,fl_progressive//image/test/four-square-card/glass-blog-multi-color.png);
-  width: 40rem;
-  height: 38rem;
+  width: 31rem;
+  height: 27rem;
   background-repeat: no-repeat;
   margin: 0 2rem;
-  background-size: 40rem;
 }
 .tpcol3 {
   background-image: url(https://cdn-images.cure.fit/www-curefit-com/image/upload/c_fill,w_400,ar_1.164,q_auto:eco,dpr_1.25,f_auto,fl_progressive//image/test/four-square-card/glass-workout-gear.png);
-  width: 40rem;
-  height: 38rem;
+  width: 31rem;
+  height: 27rem;
   background-repeat: no-repeat;
   margin: 0 2rem;
-  background-size: 40rem;
 }
 
 .tpcol4 {
   background-image: url(https://cdn-images.cure.fit/www-curefit-com/image/upload/c_fill,w_400,ar_1.164,q_auto:eco,dpr_1.25,f_auto,fl_progressive//image/test/four-square-card/sugar-fit-glass-purple.png);
-  width: 40rem;
-  height: 38rem;
+  width: 31rem;
+  height: 27rem;
   background-repeat: no-repeat;
   margin: 0 2rem;
-  background-size: 40rem;
 }
 
 .title {
@@ -485,10 +515,6 @@ li {
   box-shadow: 0px 0px 20px 12px #070707;
 }
 
-#titi {
-  position: relative;
-  left: 25rem;
-}
 .tpcol4:hover {
   box-shadow: 0px 0px 20px 12px #070707;
 }
@@ -496,46 +522,44 @@ li {
 .tip {
   padding: 3rem;
   position: relative;
-  left: 33rem;
+  left: 9rem;
   background-color: #85a4bf;
   border-radius: 20px;
-  top: -14rem;
-  height: 33rem;
-}
-
-.tip1 {
-  margin-left: -3rem;
+  top: 5rem;
 }
 
 .tipc1 {
   width: 19rem;
+  margin-right: 3rem;
 }
 
 .imgr1 {
   width: 21rem;
   border-radius: 25px;
-  margin-left: -23rem;
-  margin-top: 3rem;
+  margin-left: -3rem;
+}
+
+.imgr1 {
+  width: 21rem;
+  border-radius: 25px;
+  margin-left: 1rem;
 }
 
 .imgr2 {
   width: 21rem;
   border-radius: 25px;
-  margin-left: -6rem;
-  margin-top: 3rem;
+  margin-left: 4rem;
 }
 
 .imgr3 {
   width: 21rem;
   border-radius: 25px;
-  margin-left: -7rem;
-  margin-top: 7rem;
+  margin-left: 1rem;
 }
 .imgr4 {
   width: 21rem;
   border-radius: 25px;
-  margin-left: 10rem;
-  margin-top: 7rem;
+  margin-left: 4rem;
 }
 
 .end {
@@ -581,12 +605,12 @@ li {
 
 .fash {
   position: relative;
-  top: -6rem;
-  left: 25rem;
+  top: 12rem;
+  left: 8rem;
   border-radius: 32px;
   padding: 4rem;
-  height: 35rem;
-  width: 93.6rem;
+  height: 25rem;
+  width: 76.6rem;
   background-image: url(https://cdn-images.cure.fit/www-curefit-com/image/upload/c_fill,w_1200,ar_2.66,q_auto:eco,dpr_1.25,f_auto,fl_progressive//image/test/download-app/download-app-variant-2.png);
 }
 
@@ -620,16 +644,14 @@ li {
 .n1 {
   font-weight: 700;
   font-size: 70px;
-  font-weight: 700;
-  font-size: 70px;
-  padding: 11rem;
+  padding: 2rem;
 }
 
 .na1 {
   background-image: url(https://cdn-images.cure.fit/www-curefit-com/image/upload/c_fill,w_600,q_auto:eco,dpr_1.25,f_auto,fl_progressive//image/test/join-the-cult/career-at-cult.png);
   width: 31rem;
   height: 19rem;
-  margin-left: 22rem;
+  margin-left: 10rem;
   border-radius: 32px;
   /* background-image: url(https://cdn-images.cure.fit/www-curefit-com/image/upload/c_fill,w_600,ar_2.4,q_auto:eco,dpr_2,f_auto,fl_progressive//image/test/join-the-cult/career-icons-v2.png); */
 }
@@ -661,7 +683,6 @@ li {
 
 .nr {
   width: 92rem;
-  margin-left: 11rem;
 }
 
 .nh12 {
@@ -677,7 +698,7 @@ li {
   letter-spacing: 0.01px;
   line-height: 60px;
   -webkit-text-fill-color: transparent;
-
+  -webkit-background-clip: text;
   background-image: linear-gradient(115deg, #f8ba00 12%, #ef5fa7 80%);
 }
 
@@ -694,23 +715,22 @@ li {
 
 .txt {
   width: 39rem;
-  position: relative;
+  margin-left: 56rem;
+  margin-top: -33rem;
   opacity: 70%;
   font-size: 22px;
-  bottom: 47rem;
-  left: 94rem;
 }
 
-/* .mmimg {
+.mmimg {
   width: 95rem;
-  position: relative;
-  top: 12rem;
-} */
+  position: absolute;
+  top: 438rem;
+  right: 2rem;
+}
 
 .iiimg {
-  width: 138rem;
-  position: relative;
-  top: 6rem;
+  margin-left: -3rem;
+  width: 105rem;
 }
 
 .nbtn2 {
@@ -720,53 +740,10 @@ li {
   padding: 4px;
   color: #f06055;
 }
-#klkl {
-  width: 100%;
-}
-#er {
-  position: relative;
-  bottom: 10rem;
-  text-align: center;
-}
 
-.row {
-  width: 62%;
-  margin-left: -1rem;
-  margin-top: -4rem;
-}
-.box1 {
-  width: 26rem;
-  background: rgb(255 255 255 / 5%);
-  border: 1px solid rgb(255 255 255 / 20%);
-  flex-basis: 30%;
-  backdrop-filter: blur(50px);
-  border-radius: 10px;
-  padding: 24px;
-  text-align: center;
-}
-
-.box {
-  padding-right: 28rem;
-  width: 26rem;
-  float: left;
+.lastdiv1 {
   position: relative;
-  bottom: 49rem;
-  left: 18rem;
-}
-
-.aos-init {
-  position: relative;
-  bottom: 55rem;
-}
-#hul {
-  position: relative;
-  right: 26rem;
-  top: 12rem;
-}
-
-.oho {
-  position: relative;
-  left: 21rem;
-  width: 99rem;
-  top: 4rem;
+  top: 32rem;
+  background: #1a1818;
+  padding-left: 8rem;
 }
