--- a/frontend/src/components/store/cart.css
+++ b/frontend/src/components/store/cart.css
@@ -10,31 +10,32 @@
 .style-prefix-cv2pe {
   display: flex;
   border: 3px solid #fc2779;
+  width: -moz-fit-content;
   width: fit-content;
-  padding: 9px 30px 9px 30px;
+  padding: 7px 30px 9px 30px;
   border-radius: 21px;
   position: relative;
-  left: 14rem;
-  bottom: 293px;
+  left: 0rem;
+  bottom: -18px;
 }
 
-.style-prefix-1d4sgiw {
+.style-prefix-190oc8g {
   position: relative;
-  bottom: 18rem;
-  left: 14rem;
+  right: -12rem;
+  bottom: 14rem;
 }
 .style-prefix-1im2vgb {
   font-size: 20px;
 }
 
 #ii1 {
-  max-width: 42%;
+  max-width: 32%;
 }
 
 .style-prefix-jtzl24 {
-  font-size: 1.3rem;
+  font-size: 17px;
   font-weight: 500;
-  width: 18rem;
+  width: 14rem;
   letter-spacing: 2px;
 }
 
@@ -45,7 +46,7 @@
 }
 
 .style-prefix-1d4sgiw {
-  line-height: 50px;
+  line-height: 48px;
 }
 .style-prefix-49ww5q {
   font-size: 29px;
@@ -77,7 +78,6 @@
   border-bottom: 1px solid;
   height: 23rem;
   padding-top: 2rem;
-  padding-bottom: 22rem;
 }
 .minus-sign {
   width: 19px;
@@ -87,7 +87,7 @@
 }
 #ppppp {
   position: relative;
-  bottom: 37rem;
+  bottom: 33rem;
   left: 27rem;
   width: 5rem;
   height: 1rem;
@@ -99,19 +99,23 @@
   top: 10rem;
 } */
 .padding0-md {
-  left: 58rem;
-  width: auto;
+  left: 44rem;
+  width: 33rem;
   position: absolute;
-  top: 2rem;
+  top: -4rem;
 }
 
 .multiline {
   font-size: 21px;
   font-weight: 600;
+  padding-top: 0rem;
+  margin-left: -5rem;
+  position: relative;
+  top: 13px;
 }
 .primary-color {
-  margin-top: -25px;
-  margin-left: 25rem;
+  margin-top: -22px;
+  margin-left: 15rem;
   font-size: 23px;
   color: #fc2779;
 }
@@ -122,7 +126,7 @@
 .checkout-delivery-container {
   border-bottom: 1px solid;
   padding-bottom: 1rem;
-  width: max-content;
+  width: 31rem;
 }
 
 .checkout-price-detail-cell {
